@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-pl ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Added optimize database button on database tables grid
 - Fixed reference bug in resource/update processor
 - Improvements to Users grid to dim inactive users
 - Fixed a few bugs with MODx.Browser and file tree
